# DeepWasserstein

./: .gitignore  .pre-commit-config.yaml  LICENCE  README.md  main.ipynb  pyproject.toml  requirements.txt
