[tool.poetry]
name = "ensae-ot"
version = "0.1.0"
description = "Project for the \"Optimal Transport\" course at ENSAE."
authors = ["Gabriel Watkinson <gabriel.watkinson@ensae.fr>", "Augustin Combes <augustin.combes@ensae.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"
pandas = "^2.0.1"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
jax = "^0.4.8"
ott-jax = "^0.4.0"
flax = "^0.6.9"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
notebook = "^6.5.4"
ipywidgets = "^8.0.6"
ipykernel = "^6.22.0"
poethepoet = "^0.19.0"
pre-commit = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"
float_to_top = true

[tool.flake8]
ignore = ['E203', 'E501', 'W503']
max-line-length = 100
count = true
docstring-convention = 'google'


[tool.poe.tasks]
update_jax_12 = [
  { cmd = 'pip install --upgrade "jax[cuda12_pip]" -f https://storage.googleapis.com/jax-releases/jax_cuda_releases.html' },
]
update_jax_11 = [
  { cmd = 'pip install --upgrade "jax[cuda11_pip]" -f https://storage.googleapis.com/jax-releases/jax_cuda_releases.html' },
]